correcting the spacing

--- a/myprojects/test/css/style.css
+++ b/myprojects/test/css/style.css
@@ -127,7 +127,7 @@ h1 { font-size: 1.5em; margin: 10px; }
   
 .color-choose ul{list-style:none; padding:0; margin: 0;display: inline-block;}
 
-.color-choose li{margin: 0 20px 0 0; display: inline-block;}
+.color-choose li{margin: 0 2px 0 0; display: inline-block;}
 
 .color-choose label{cursor: pointer;}
 
@@ -172,7 +172,7 @@ h1 { font-size: 1.5em; margin: 10px; }
   /*color: #535559;*/
    }
 .capacity-choose ul{list-style:none; padding:0; margin: 0;display: inline-block;}
-.capacity-choose li{margin: 0 20px 0 0; display: inline-block;}
+.capacity-choose li{margin: 0 2px 0 0; display: inline-block;}
 
 .capacity-choose label{cursor: pointer;}
 
@@ -184,13 +184,13 @@ h1 { font-size: 1.5em; margin: 10px; }
   display:inline-block;
   background: #eee;
   border: 1px solid #ccc;
-  padding: 0px;
-  margin: 5px; 
-  height: 30px;
-  width: 30px;
+  padding: 6px;
+  height: 21px;
+  width: 21px;
   float: left;
   text-align: center;
   border-radius: 10px;
+}
  /* padding-bottom: 0px;
   height: 30px;
   width:30px;
@@ -199,7 +199,7 @@ h1 { font-size: 1.5em; margin: 10px; }
   outline: #42c5f4;
   border-radius: 10px;
   background-color: #eff5ff; */
-}
+
 /*
 .capacity-choose label {
   display: inline-block;
